# DrAgnes

./: .gitignore  .gitmodules  CLAUDE.md  README.md  cloud-run.yaml  dragnes.config.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/memory/: MEMORY.md  project_dragnes.md
.github/workflows/: ci.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
crates/mcp-brain-server/: Cargo.toml  Cargo.workspace.toml  Dockerfile
crates/mcp-brain-server/src/: graph.rs  pipeline.rs  routes.rs  trainer.rs  types.rs
crates/ruvllm-wasm/: Cargo.toml
docs/: CHANGELOG.md  CLINICAL-FEEDBACK-DR-CHANG.md  CODE-DIAGNOSTIC-REPORT.md  DDD-DOMAIN-MODEL.md  DUAL-MODEL-ARCHITECTURE.md  FDA-AUDIT-REPORT.md  FDA-REGULATORY-ANALYSIS.md  HAM10000_analysis.md  MELA-EXECUTION-PLAN.md  PIPELINE-EXPLAINER.md  PRODUCTION-READINESS-AUDIT.md  PROJECT-HISTORY.md  QUALITY-SCORECARD.md  TECHNICAL-REPORT.md  architecture.md  competitive-analysis.md  data-sources.md  deployment.md  dermlite-integration.md  future-vision.md  hipaa-compliance.md
docs/adr/: ADR-115-common-crawl-temporal-compression.md  ADR-117-dragnes-dermatology-intelligence-platform.md  ADR-118-cost-effective-crawl-strategy.md  ADR-118-dragnes-production-validation.md  ADR-119-consumer-skin-screening.md  ADR-119-historical-crawl-evolutionary-comparison.md  (+13 more)
scripts/: analyze-evolution.js  analyze-ham10000.js  auroc-results.json  calibrate-temperature.py  calibration-results.json  calibration-temperature.json  classify-image.py  clinical-metrics-analysis.py  clinical-metrics-full.json  combined-training-results.json  compute-auroc.py  compute-confidence-intervals.py  confidence-intervals.json  cross-validate.py  cross-validation-results.json  deploy-crawl-phase1.sh  deploy-verified.sh  deploy-wet-job.sh  deploy.sh  download-datasets.py  ensemble-validation-results.json  export-onnx-v2.py  fitzpatrick-equity-audit.py  fitzpatrick-equity-report.json  fitzpatrick-v2-validation.json  fitzpatrick-validate-v2.py  historical-crawl-import.sh  isic2019-validation-results.json  multi-image-validation-results.json  onnx-v2-validation.json  optimal-thresholds.json  optimize-thresholds.py  siglip-test-results.json  test-siglip.mjs  test-siglip.py  threshold-optimization-results.json  train-classifier.mjs  train-combined.py  train-fast.py  train-proper.py  (+7 more)
src/: app.css  app.html  hooks.server.ts  icons.d.ts  onnxruntime-node.d.ts  sharp.d.ts
static/: how-it-works.html  manifest.json  robots.txt  sitemap.xml  sw-model-cache.js  sw.js
tests/: api-endpoints.test.ts  benchmark.test.ts  classifier.test.ts  clinical-baselines.test.ts  consumer-translation.test.ts  icd10.test.ts  image-quality.test.ts  lesion-gate.test.ts  measurement.test.ts  meta-classifier.test.ts  multi-image.test.ts  risk-stratification.test.ts  spot-detector.test.ts  threshold-classifier.test.ts
(+186 files in other folders)
